--- a/orgs/release.json
+++ b/orgs/release.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "asdsxa - Release Test Org",
+  "orgName": "solutioncloud - Release Test Org",
   "edition": "Enterprise",
   "settings": {
     "lightningExperienceSettings": {
