--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -1,28 +1,25 @@
-minimum_cumulusci_version: '3.86.0'
+minimum_cumulusci_version: 3.86.0
 project:
     name: asdsxa
     package:
         name: asdsxa
         api_version: '60.0'
     git:
-        default_branch: 'main'
-        prefix_feature: 'feature/'
-        prefix_beta: 'beta/'
-        prefix_release: 'release/'
+        default_branch: main
+        prefix_feature: feature/
+        prefix_beta: beta/
+        prefix_release: release/
     source_format: sfdx
-
 tasks:
     robot:
         options:
             suites: robot/asdsxa/tests
             options:
                 outputdir: robot/asdsxa/results
-
     robot_testdoc:
         options:
             path: robot/asdsxa/tests
             output: robot/asdsxa/doc/asdsxa_tests.html
-
     run_tests:
         options:
             required_org_code_coverage_percent: 75
